// controller.proto
syntax = "proto3";

package controller;
option go_package = "adaptodb/pkg/controller/proto";

// Reuse matching types from pkg/schema/types.go
message KeyRange {
  string start = 1;
  string end = 2;
}

message ShardMetadata {
  uint64 shard_id = 1;
  KeyRange key_range = 2;
}

message UpdateScheduleRequest {
  repeated ShardMetadata schedule = 1;
}

message UpdateScheduleResponse {
  string status = 1;
  string message = 2;
}

service Controller {
  rpc UpdateSchedule(UpdateScheduleRequest) returns (UpdateScheduleResponse) {}
}